ingress/calculateur-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca-gamma
  namespace: calculateur-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ca-gamma.sorec.ma
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-calculateur
            port:
              number: 80
