ingress/concentrateur-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co-gamma
  namespace: concentrateur-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: co-gamma.sorec.ma
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: concentrateur-front
            port:
              number: 8080
